objects/Apex_Debug_Log__c.object
<CustomObject>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id / Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>A Custom Object to hold Logs of type Error and Information created from various other Apex Classes. Unlike the native Debug Logs, the data or log created here are mere records and hence they're persistent.

Please employ the Apex Class named "ApexDebugLog" to utilize this Custom Object to save or log Errors or Information. There are also methods to create logs even via JavaScript.</description>
    <label>Apex Debug Log</label>
    <nameField>
        <displayFormat>ADL-{0}</displayFormat>
        <label>Apex Debug Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Apex_Class__c</columns>
        <columns>Message__c</columns>
        <columns>Method__c</columns>
        <columns>Record_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>